--- a/src/components/day/day.css
+++ b/src/components/day/day.css
@@ -3,9 +3,8 @@
   width: 20%;
   float: left;
   box-sizing: border-box;
-  border-left: 1px solid #e4e4e4;
-  border-bottom: 1px solid #e4e4e4;
-  border-top: 1px solid #e4e4e4; }
+  border: 1px solid #e4e4e4;
+  border-right: 0; }
   @media (max-width: 750px) {
     .day {
       float: none;
@@ -17,4 +16,4 @@
   .day_current {
     background: #e0e9ff; }
   .day_disabled {
-    background: #efefef6e; }
+    background: #efefef; }
